# imgfind

./: .editorconfig  .pre-commit-config.yaml  Makefile  pyproject.toml
.github/workflows/: python-package.yml
imgfind/: main.py
imgfind/core/: fs.py  image.py  settings.py  tasks.py
imgfind/utils/: color.py
tests/: conftest.py
tests/assets/benchmark/: sample 4288 x 2848 x 24 bit.tif  sample 4288 x 2848 x 32 bit.tif  sample 4288 x 2848 x 8 bit (256 entries).tif
tests/core/fs/: test_supported_files_iter.py
tests/core/image/: test_get_dominant_colors.py  test_get_match_ratio.py
tests/utils/: test_color_from_str.py
